fixed spacing, fixed other styling i missed

--- a/ni/static/css/style.css
+++ b/ni/static/css/style.css
@@ -268,7 +268,7 @@ a.down-arrow:after {
 }
 
 #product_category {
-    margin-left: 240px;
+    margin: 2rem 0 0 15rem
 }
 
 #product_category ul {
@@ -1235,7 +1235,6 @@ div.upsell .upselldescription {
 }
 
 form#search-page label {
-    text-transform: lowercase;
     display: block;
     margin-top: 15px;
 }
@@ -1252,12 +1251,15 @@ form#search-page input[type=submit] {
 
 .login-form,
 .register-form,
-.reset-password-form {
+.reset-password-form,
+.checkout-form,
+.ship-form {
     background: #fafafc url("http://subtlepatterns.com/patterns/concrete_seamless.png") top center repeat;
     padding: 2rem;
 }
 
-.register-container {
+.register-container,
+.ship-container {
     width: 22rem;
     margin: 0 auto;
     -webkit-border-radius: 3px;
@@ -1273,12 +1275,17 @@ form#search-page input[type=submit] {
     padding: 0.5rem 1rem;
 }
 
+.ship-container {
+    width: 60rem;
+}
+
 .register-container h4 {
     margin-top: 1.2rem;
     text-align: center;
 }
 
-.register-container input {
+.register-container input,
+.ship-container input {
     font-family: sans-serif;
     font-size: 1em;
     height: 2.5rem;
@@ -1289,6 +1296,7 @@ form#search-page input[type=submit] {
     width: 100%;
     border: 1px solid #999;
 }
+
 .login-container input[type=submit] {
     cursor: pointer;
     display: block;
@@ -1301,4 +1309,151 @@ form#search-page input[type=submit] {
     background: -ms-linear-gradient(top, #ddd1e7 2%, #bba3d0 8%, #aa8cc5 58%, #9975b9 95%, #885ead);
     background: -moz-linear-gradient(top, #ddd1e7 2%, #bba3d0 8%, #aa8cc5 58%, #9975b9 95%, #885ead);
     background: -webkit-linear-gradient(top, #ddd1e7 2%, #bba3d0 8%, #aa8cc5 58%, #9975b9 95%, #885ead);
+}
+
+/* Checkout Pages... normalize this after done, it's ugly */ 
+
+.checkout-container {
+    width: 35rem;
+    padding: 0;
+    margin: 0 auto;
+}
+
+.checkout-container li {
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+    margin-bottom: 2rem;
+}
+
+.checkout-ship {
+    width: 45rem;
+    margin: 2rem auto;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+    margin-bottom: 2rem;
+    padding: 2rem;
+}
+
+.cart-item {
+    width: 100%;
+}
+
+.item-info {
+    display: table;
+}
+
+.item-image {
+    display: table-cell;
+    width: 7em;
+    padding: 0;
+    border-right: 1px solid rgba(221, 221, 221, 0.35);
+    border-bottom: 0;
+}
+
+.item-image img {
+    display: block;
+    width: 75%;
+    height: auto;
+    margin: 0 auto;
+    border-radius: 5px;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.item-desc {
+    display: table-cell;
+    width: 23em;
+    padding: 0.75em 1em;
+    border-right: 1px solid rgba(221, 221, 221, 0.35);
+    vertical-align: middle;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+}
+
+.item-price {
+    display: table-cell;
+    width: 12rem;
+    padding: 0;
+    text-align: center;
+    background-color: #fcfcfc;
+    color: #aa8cc5;
+    font-weight: bold;
+    border-radius: 0 3px 3px 0;
+    vertical-align: middle;
+    font-size: 1rem;
+}
+
+.item-interactions {
+    display: block;
+    width: 100%;
+    padding: 1.5em;
+    color: #666;
+    font-size: 0.8em;
+    border-top: 1px solid rgba(221, 221, 221, 0.35);
+}
+
+.item-quantity {
+    margin-top: 0;
+    margin-bottom: 0;
+    float: left;
+}
+
+.item-remove {
+    float: right;
+    width: 3rem;
+    padding: 0.5rem;
+}
+
+.cart-summary {
+    width: 35rem;
+    margin: 2rem auto;
+    overflow: hidden;
+}
+
+.cart-summary .button {
+    border-color: #ddd1e7 #bba3d0 #aa8cc5;
+    background: #ddd1e7;
+    background: -o-linear-gradient(top, #ddd1e7 2%, #bba3d0 8%, #aa8cc5 58%, #9975b9 95%, #885ead);
+    background: -ms-linear-gradient(top, #ddd1e7 2%, #bba3d0 8%, #aa8cc5 58%, #9975b9 95%, #885ead);
+    background: -moz-linear-gradient(top, #ddd1e7 2%, #bba3d0 8%, #aa8cc5 58%, #9975b9 95%, #885ead);
+    background: -webkit-linear-gradient(top, #ddd1e7 2%, #bba3d0 8%, #aa8cc5 58%, #9975b9 95%, #885ead);
+    display: block;
+    padding: 1rem;
+    color: #fff;
+    font-weight: bold;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.35);
+    background-color: #e66b1e;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.steps,
+.checkout {
+    float: left;
+    width: 16.75em;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+}
+
+.steps {
+    margin-right: 1.5rem;
+    margin-bottom: 0;
+}
+
+.steps li,
+.checkout li {
+    padding: 1em;
+    border-bottom: 1px solid rgba(221, 221, 221, 0.35);
+}
+
+.cart-item:after, 
+.item-interactions:after, 
+.summary:after {
+  content: "";
+  display: table;
+  clear: both;
 }
